# trellis2-mps

./: .gitignore  MPS_PORT_NOTES.md  README.md  generate.py  pyproject.toml  setup.sh
manifests/: trellis_mac_probe.json
stubs/o_voxel/: io.py  rasterize.py
